--- a/xdclass-user-service/pom.xml
+++ b/xdclass-user-service/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>xdclass-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>kaptcha-spring-boot-starter</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
