--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
             </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.7.0</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
