--- a/xdclass-product-service/pom.xml
+++ b/xdclass-product-service/pom.xml
@@ -10,6 +10,18 @@
     </parent>
 
     <artifactId>xdclass-product-service</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.zzf</groupId>
+            <artifactId>xdclass-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>kaptcha-spring-boot-starter</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
