--- a/xdclass-product-service/pom.xml
+++ b/xdclass-product-service/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>kaptcha-spring-boot-starter</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version> <!-- Use the latest version -->
+        </dependency>
     </dependencies>
 
     <properties>
