--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,5 +27,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+    - name: Set up application.yml
+      run: |
+        echo "port: ${{ secrets.REDIS_HOST }}" >> xdclass-product-service/src/main/resources/application.yml
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
