--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      REDIS_HOST: ${{ secrets.REDIS_HOST }}
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
