--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,12 @@
 
     <groupId>com.zzf</groupId>
     <artifactId>xdclass</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
+    <!-- 一般来说父级项目的packaging都为pom，packaging默认类型jar类型-->
     <packaging>pom</packaging>
+
+    <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>xdclass-common</module>
         <module>xdclass-product-service</module>
@@ -19,21 +23,31 @@
 
     <properties>
 
+        <!--JDK版本，如果是jdk8则这里是 1.8-->
         <java.version>11</java.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+
+
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <spring.cloud.version>Hoxton.SR8</spring.cloud.version>
         <alibaba.cloud.version>2.2.1.RELEASE</alibaba.cloud.version>
         <mybatisplus.boot.starter.version>3.4.0</mybatisplus.boot.starter.version>
-        <lombok.version>1.18.16</lombok.version>
+
+        <lombok.version>1.18.30</lombok.version>
         <commons.lang3.version>3.9</commons.lang3.version>
         <commons.codec.version>1.15</commons.codec.version>
         <springfox.boot.starter.version>3.0.0</springfox.boot.starter.version>
+
         <docker.image.prefix>xdclass-cloud</docker.image.prefix>
+
         <!--跳过单元测试-->
         <skipTests>true</skipTests>
+
     </properties>
+
+
+
     <!--锁定版本-->
     <dependencyManagement>
         <dependencies>
@@ -107,31 +121,40 @@
                 <version>${springfox.boot.starter.version}</version>
             </dependency>
 
+
+
+            <!--验证码kaptcha依赖包-->
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>kaptcha-spring-boot-starter</artifactId>
                 <version>1.1.0</version>
             </dependency>
+
+
+            <!--阿里云oss-->
             <dependency>
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>3.10.2</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-            </dependency>
 
-            <!--用于加密-->
-            <dependency>
-                <groupId>commons-codec</groupId>
-                <artifactId>commons-codec</artifactId>
-            </dependency>
+
+
+            <!-- JWT相关 -->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>0.7.0</version>
+            </dependency>
+
+
+
+
+            <!--分布式锁-->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>3.10.1</version>
             </dependency>
 
         </dependencies>
@@ -182,5 +205,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
