--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
                 <version>3.10.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-bootstrap</artifactId>
+                <version>3.0.1</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
