--- a/xdclass-common/pom.xml
+++ b/xdclass-common/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
 
         <!-- 代码自动生成依赖 begin 上线后不需要，只在common中添加 -->
         <dependency>
@@ -124,13 +130,10 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-
-        <!--配置中心-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
-
 
         <!--Feign远程调用-->
         <dependency>
